# auto_updater_package

./: .gitignore  LICENSE  README.md  main_auto_update.py  main_pihole_update.py  main_postfix_purge.py  main_postfix_setup.py  main_update_pihole.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config_files/: __init__.py  vim_utils.txt
postfix_manager/: __init__.py  auto_update.py  command_utils.py  config_vim.py  email_utils.py  env_utils.py  logging_utils.py  postfix_purge.py  postfix_setup.py  update_pihole.py
src/sysmaint/: __init__.py  __main__.py  cli.py
src/sysmaint/core/: config.py  email.py  lock.py  logging_utils.py  runner.py  system.py
src/sysmaint/data/: config.sample.conf  vim_utils.txt
src/sysmaint/data/systemd/: sysmaint-pihole.service  sysmaint-pihole.timer  sysmaint-update.service  sysmaint-update.timer
src/sysmaint/tasks/: apt_update.py  configure_unattended.py  install.py  migrate.py  pihole.py  postfix_purge.py  postfix_setup.py  status.py  test_email_cmd.py  vim_config.py
tests/: conftest.py  test_apt_update.py  test_cli.py  test_config.py  test_email.py  test_lock.py  test_logging.py  test_postfix_setup.py  test_runner.py  test_system.py
