[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysmaint"
version = "1.0.0"
description = "Fleet-deployable Linux server maintenance CLI with email notifications via Gmail SMTP relay"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Stephen J Kennedy" },
]
keywords = ["sysadmin", "apt", "automation", "monitoring", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
# Standard library only — keeps deploys simple and avoids supply-chain risk.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
sysmaint = "sysmaint.cli:main"

[project.urls]
Homepage = "https://github.com/Stephen-Kennedy/auto_updater_package"
Issues = "https://github.com/Stephen-Kennedy/auto_updater_package/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sysmaint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Tests don't need full strictness
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
